clang/test/Driver/modules-driver-dep-scan-diagnostics.cpp
// Tests that the module dependency scan properly outputs diagnostics which 
// were collected during the dependency scan.

// RUN: split-file %s %t

// RUN: %clang -ccc-print-phases -fmodules -fmodules-driver -Rmodules-driver \
// RUN:   -fmodule-map-file=%t/module.modulemap %t/main.cpp 2>&1 \
// RUN:  | FileCheck --check-prefixes=CHECK %s

//--- module.modulemap
module a { header "a.h" }

//--- a.h
#include "doesnotexist.h"
// CHECK: a.h:{{.*}}:{{.*}}: fatal error: 'doesnotexist.h' file not found

//--- main.cpp
// Diagnostics collected during the dependency scan need to be translated to
// and from a representation that can outlive the compiler invocation they
// were generated by.
// We test that the diagnostics source location is translated correctly:
//----10|-------20|--------30|
/*just some space*/ #include "a.h"
// CHECK: main.cpp:6:30: fatal error: could not build module 'a'

